# bevy_tray_icon

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: window_visible.rs
src/: error.rs  lib.rs  plugin.rs  resource.rs
src/plugin/: menu_event.rs
src/resource/: menu_item.rs
