[package]
name = "bevy_tray_icon"
version = "0.2.0"
edition = "2021"
authors = ["notelm"]
categories = ["game-development"]
description = "Allows the use of tray-icon to manipulate the system tray."
keywords = ["game", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/not-elm/bevy_tray_icon"
exclude = ["assets/"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_render"
] }
tray-icon = "0.21.0"
thiserror = "2"

[dev-dependencies]
bevy = "0.16"

[lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"